--- a/style.css
+++ b/style.css
@@ -205,6 +205,7 @@ section {
 #projects {
     display: flex;
     flex-direction: column;
+    margin-bottom: 25%;
     margin-left: 10%; 
     margin-right: 10%; 
 }
@@ -369,6 +370,33 @@ section {
 .footer-text {
     font-size: 1rem;
 }
+
+/* ABOUT ME SECTION */
+.about {
+    display: flex;
+    flex-direction: row;
+    align-items: center; /* Align items vertically */
+    margin-top: 5%;
+    margin-bottom: 5%;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.about-info {
+    flex: 1;
+    margin-right: 1rem;
+    height: 400px; /* Match the height of the image */
+    align-items: flex-start; /* Align items at the start */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; /* Space out items evenly */
+}
+
+.about img {
+    width: 400px; 
+    height: auto;
+}
+
 
 /* ICONS */
 
