--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* GENERAL */
 
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+@import url("https://api.fontshare.com/css?f[]=satoshi@500,700&display=swap");
 
 * {
     margin: 0;
@@ -8,7 +8,7 @@
 }
 
 body {
-    font-family: "Poppins", sans-serif;
+    font-family: 'Satoshi', sans-serif;
 }
 
 html {
@@ -345,7 +345,7 @@ section {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 20px;
+    font-size: 17px;
     transition: background-color 0.3s;
     border-radius: 20px;
   }
